slash command implementation and low-resource optimizations